# iLiSA

./: .gitignore  .readthedocs.yaml  CVC_SVD_anal.ipynb  Dockerfile  LICENSE.txt  README.md  ephemhandler.py  horizon_extract.ipynb  iLiSA.code-workspace  pyproject.toml  setup.cfg  setup.py  work_with_cvc.ipynb
docs/: Makefile  conf.py  getting_started.rst  index.rst  installing.rst
docs/user_guide/: index.rst
docs/user_guide/calim/: index.rst
docs/user_guide/pipelines/: index.rst
ilisa/: __init__.py
ilisa/antennameta/: __main__.py  antennafieldlib.py  calibrationtables.py  delays.py  export.py  show_arrconfs.py
ilisa/antennameta/share/: .gitignore
ilisa/beamformedstreams/: bfbackend.py
ilisa/calim/: __init__.py  beam.py  calibration.py  flagging.py  geodesy.py  im_process.py  imageprocess.py  imaging.py  robviscal.py  skymodels.py  visibilities.py
ilisa/monitor/: README.md
ilisa/monitor/client/: FatterLines.sh  LCUcli-file.py  LCUcli.py  LOFAR_cacti_template_DE601-brix.xml  LOFAR_cacti_template_Fat.xml  LOFAR_cacti_template_GLOW.xml  LOFAR_cacti_template_NoFat.xml  crontab-cacti.txt
ilisa/monitor/docs/: Cacti_Setup_GLOW.md  iStnMonitorDoc.md
ilisa/monitor/relay/: .gitignore  Notes.rst  Notes.txt  relay_config.py.template  shamecheck.c  stnMonitorRelay.py
ilisa/monitor/server/: .gitignore  crontab-LCU.txt  parse_rspctl.py  parse_tbbctl.py  stnStatMon.py  stnStatMon.py_ORIG  stnStatMon_config.py.template  stnStatMon_crontab  stnStatMon_crontab.template
ilisa/monitorcontrol/: _rem_exec.py  data_io.py  directions.py  druinterface.py  lcuinterface.py  modeparms.py  programs.py  scansession.py  stationdriver.py
ilisa/monitorcontrol/configs/: access_lclstn_DIST.conf
ilisa/monitorcontrol/scansess_examples/: full_ScnSes.yaml  multiscans_ScnSes.yaml
ilisa/observations/: 0_project_DIST.yml  0_projprof_DIST.yml  __init__.py  access-DRU_DIST.conf  access-LCU_DIST.conf  access_DIST.conf  access_config_DIST.yml  accessconf_localstation_DIST.yml  dataIO.py  data_io.py  directions.py  druinterface.py  imaging.py  lcuinterface.py  modeparms.py  observing.py  programs.py  project_0_DIST.conf  recordBFlanes.py  scansession.py  session.py  stationcontrol.py  stationdriver.py  stationinterface.py  stations_roster_DIST.conf  stationsession.py
ilisa/observations/beamformed_rec/: .gitignore  dump_udp_ow_4.c
ilisa/observations/beamformedstreams/: .gitignore  Makefile  bfbackend.py  dump_udp_ow_11.c  dump_udp_ow_12.c  rec_bf_streams.py  rec_bf_streams_py.py
ilisa/observations/configs/: access_lclstn_DIST.conf  project_0_DIST.conf
ilisa/observations/scansess_examples/: bst_ScnSes.yaml  full_ScnSes.yaml  multiscans_ScnSes.yaml  proj0_bst_ScnSes.yaml  proj0_full_ScnSes.yaml  proj0_multiscans_ScnSes.yaml
ilisa/observations/scheds/: proj0_bst_StnSess.yaml  proj0_bst_stnsched.yaml  proj0_full_stnsched.yaml  (+1 more)
ilisa/operations/: __init__.py  _rem_exec.py  data_io.py  directions.py  druinterface.py  filefolder.py  lcuinterface.py  modeparms.py  programs.py  scan.py  scansession.py  stationdriver.py
ilisa/pipelines/: Makefile  __init__.py  bfbackend.py  bfs_data.py  dump_udp_ow_14.c  dump_udp_ow_17.c  rec_bf_streams_py.py
ilisa/scripts/: filecheck.py  ilisa_cmd.py  ilisa_rec.py  ilisa_sched.py  ilisa_view.py  stnarr_meta.py  xst2ms.py
scripts/: acc2bst.py  do_acc.py  do_bfs.py  do_bsxST.py  do_tbb.py  ilisa_adm.py  ilisa_applycal.py  ilisa_cmd.py  ilisa_rec.py  ilisa_scans.py  ilisa_sched.py  ilisa_ses.py  ilisa_spec.py  ilisa_specf.py  ilisa_sses.py  ilisa_view.py  image.py  plotbsxst.py  runBFobs_ow.py  stationprompt.py  stnarr_meta.py  xst2ms.py
(+15 files in other folders)
