[metadata]
name = iLiSA
version = attr: ilisa.__version__
author = Tobia D. Carozzi
author_email = tobia.carozzi@chalmers.se
description = Package for handling international LOFAR station in stand-alone mode
license = ISC
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: ISC License
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization

[options]
packages =
    ilisa
    ilisa.antennameta
    ilisa.calim
    ilisa.operations
    ilisa.pipelines
    ilisa.scripts
install_requires =
    numpy
    scipy
    python-casacore
    matplotlib
    PyYAML
    h5py

[options.package_data]
ilisa.operations =
    share/config/access_lclstn_DIST.conf
    share/config/project_0_DIST.conf
    share/scansess_examples/*.yaml
ilisa.antennameta =
    share/CalTables/*/data/*.dat
    share/StaticMetaData/*.conf

[options.entry_points]
console_scripts =
    ilisa_adm = ilisa.operations.stationdriver:main_cli
    ilisa_rec = ilisa.operations.scan:main_cli
    ilisa_obs = ilisa.operations.scansession:main_cli
    ilisa_view = ilisa.operations.data_io:cli_view
    ilisa_export = ilisa.operations.data_io:cli_export
    ilisa_sched = ilisa.scripts.ilisa_sched:main
    calim_calib = ilisa.calim.calibration:main_cli
    calim_image = ilisa.calim.imaging:main_cli
    calim_model = ilisa.calim.skymodels:main_cli
    pl_bfs = ilisa.pipelines.bfs_data:main_cli
    pl_rec = ilisa.pipelines.bfbackend:bfsrec_main_cli
